# libgpiod

./: .gitignore  .readthedocs.yaml  Doxyfile  NEWS  README  TODO  configure.ac
bindings/cxx/: .readthedocs.yaml  Makefile.am  chip-info.cpp  (+15 more)
bindings/cxx/gpiodcxx/: Makefile.am  chip-info.hpp  chip.hpp  edge-event-buffer.hpp  edge-event.hpp  exception.hpp  info-event.hpp  line-config.hpp  line-info.hpp  line-request.hpp  line-settings.hpp  line.hpp  misc.hpp  request-config.hpp  timestamp.hpp
examples/: Makefile.am
examples/ext/: Makefile.am  async_watch_line_value.c  get_line_value.c  toggle_line_value.c  watch_line_rising.c  watch_line_value.c
include/: Makefile.am  gpiod-ext.h  gpiod.h
lib/: Makefile.am  chip-info.c  chip.c  core.c  ctxless.c  edge-event.c  info-event.c  internal.c  internal.h  iter.c  line-config.c  line-info.c  line-request.c  line-settings.c  misc.c  request-config.c
man/: Makefile.am
sphinx/: Doxyfile  build_docs.sh  c.rst  c_api.rst  conf.py  cxx.rst  faq.rst  index.rst  python.rst  requirements.txt  rust.rst
tests/: Makefile.am  gpiod-test-helpers.h  gpiod-test-sim.c  gpiod-test.c  gpiod-test.h  tests-chip.c  tests-ctxless.c  tests-edge-event.c  tests-event.c  tests-info-event.c  tests-iter.c  tests-line-config.c  tests-line-info.c  tests-line-request.c  tests-line-settings.c  tests-line.c  tests-misc.c  tests-request-config.c
tools/: .gitignore  Makefile.am  gpio-tools-test  gpio-tools-test.bats  gpiodetect.c  gpiofind.c  gpioget.c  gpioinfo.c  gpiomon.c  gpionotify.c  gpioset.c  gpiowatch.c  tools-common.c  tools-common.h
(+53 files in other folders)
