# SPDX-License-Identifier: GPL-2.0-or-later
# SPDX-FileCopyrightText: 2021 Bartosz Golaszewski <brgl@bgdev.pl>

otherincludedir = $(includedir)/gpiodcxx
otherinclude_HEADERS = \
	chip.hpp \
	chip-info.hpp \
	edge-event-buffer.hpp \
	edge-event.hpp \
	exception.hpp \
	info-event.hpp \
	line.hpp \
	line-config.hpp \
	line-info.hpp \
	line-request.hpp \
	misc.hpp \
	request-config.hpp \
	timestamp.hpp
